--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
         export PATH="$(brew --prefix bison)/bin:$PATH"
 
     - name: Installing dependencies if needed (Windows)
+      if: ${{ runner.os == 'Windows' }}
       uses: msys2/setup-msys2@v2
       with:
         install: >-
