--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,31 +35,30 @@ jobs:
         fi
         echo "::set-output name=branch::${EXPORT_VALUE}"
 
-  configure:
-    name: Configure Easea
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+  configure-MacOS:
+    name: Configure Easea (macOS)
+    runs-on: macos-latest
     needs: [pre-ci]
     outputs:
-      status-Linux: ${{ steps.status.outputs.status-Linux }}
-      status-Windows: ${{ steps.status.outputs.status-Windows }}
-      status-macOS: ${{ steps.status.outputs.status-macOS }}
+      status: ${{ steps.status.outputs.status }}
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Installing dependencies if needed (macOS)
+    - name: Installing dependencies if needed
       shell: bash
-      if: ${{ runner.os == 'macOS' }}
       run: |
         brew install bison
         export PATH="$(brew --prefix bison)/bin:$PATH"
 
-    - name: Installing dependencies if needed (Windows)
-      if: ${{ runner.os == 'Windows' }}
+
+  configure-Windows:
+    name: Configure Easea (Windows)
+    runs-on: windows-latest
+    needs: [pre-ci]
+    outputs:
+      status: ${{ steps.status.outputs.status }}
+
+    steps:
+    - name: Installing dependencies if needed
       uses: msys2/setup-msys2@v2
       with:
         install: >-
@@ -68,25 +67,33 @@ jobs:
           bison
 
     - name: Configure CMake
-      if: ${{ runner.os != 'Windows' }}
       run: cmake -B ./build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      shell: bash
+      shell: msys2 {0}
 
-    - name: Configure CMake (Windows)
-      if: ${{ runner.os == 'Windows' }}
-      run: cmake -B ./build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+  configure-Linux:
+    name: Configure Easea
+    runs-on: ubuntu-latest
+    needs: [pre-ci]
+    outputs:
+      status: ${{ steps.status.outputs.status }}
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Configure CMake
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       shell: msys2 {0}
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-configured-${{ runner.os }}
-        path: ./build
+        name: build-configured-Linux
+        path: ${{github.workspace}}/build
 
     - name: Save status
       if: ${{ always() }}
       id: status
-      run: echo "::set-output name=status-${{ runner.os }}::${{ job.status }}"
+      run: echo "::set-output name=status::${{ job.status }}"
       shell: bash
 
   build:
