--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,19 +96,12 @@ jobs:
       run: echo "::set-output name=status::${{ job.status }}"
       shell: bash
 
-  build:
+  build-Linux:
     name: Build Easea
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: ubuntu-latest
     needs: [configure]
     outputs:
-      status-Linux: ${{ steps.status.outputs.status-Linux }}
-      status-Windows: ${{ steps.status.outputs.status-Windows }}
-      status-macOS: ${{ steps.status.outputs.status-macOS }}
-    if: ${{ format('needs.configure.status-{0}', runner.os) == 'success' }}
+      status: ${{ steps.status.outputs.status }}
 
     steps:
       - uses: actions/checkout@v3
@@ -116,28 +109,28 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
-          name: build-configured-${{ runner.os }}
-          path: ./build
+          name: build-configured-Linux
+          path: ${{github.workspace}}/build
 
       - name: Generating configuration
-        run: cmake -B ./build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         shell: bash
 
       - name: Building easea
         id: build
-        run: cmake --build ./build --config ${{env.BUILD_TYPE}}
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
         shell: bash
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: built
+          name: built-Linux
           path: ${{github.workspace}}/build
 
       - name: Save status
         if: ${{ always() }}
         id: status
-        run: echo "::set-output name=status-${{ runner.os }}::${{ job.status }}"
+        run: echo "::set-output name=status-Linux::${{ job.status }}"
         shell: bash
 
   install:
