--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
   build-Linux:
     name: Build Easea
     runs-on: ubuntu-latest
-    needs: [configure]
+    needs: [configure-Linux]
     outputs:
       status: ${{ steps.status.outputs.status }}
 
