--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,12 +43,29 @@ jobs:
       status: ${{ steps.status.outputs.status }}
 
     steps:
+    - uses: actions/checkout@v3
+
     - name: Installing dependencies if needed
       shell: bash
       run: |
         brew install bison
         export PATH="$(brew --prefix bison)/bin:$PATH"
 
+    - name: Configure CMake
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      shell: bash
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-configured-MacOS
+        path: ${{github.workspace}}/build
+
+    - name: Save status
+      if: ${{ always() }}
+      id: status
+      run: echo "::set-output name=status::${{ job.status }}"
+      shell: bash
 
   configure-Windows:
     name: Configure Easea (Windows)
@@ -71,7 +88,7 @@ jobs:
       shell: msys2 {0}
 
   configure-Linux:
-    name: Configure Easea
+    name: Configure Easea (Linux)
     runs-on: ubuntu-latest
     needs: [pre-ci]
     outputs:
@@ -82,7 +99,7 @@ jobs:
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      shell: msys2 {0}
+      shell: bash
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
