--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
       status: ${{ steps.status.outputs.status }}
 
     steps:
+    - uses: actions/checkout@v3
     - name: Installing dependencies if needed
       uses: msys2/setup-msys2@v2
       with:
@@ -114,7 +115,7 @@ jobs:
       shell: bash
 
   build-Linux:
-    name: Build Easea
+    name: Build Easea (Linux)
     runs-on: ubuntu-latest
     needs: [configure-Linux]
     outputs:
@@ -147,11 +148,48 @@ jobs:
       - name: Save status
         if: ${{ always() }}
         id: status
-        run: echo "::set-output name=status-Linux::${{ job.status }}"
+        run: echo "::set-output name=status::${{ job.status }}"
+        shell: bash
+
+  build-MacOS:
+    name: Build Easea (MacOS)
+    runs-on: macos-latest
+    needs: [configure-MacOS]
+    outputs:
+      status: ${{ steps.status.outputs.status }}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-configured-MacOS
+          path: ${{github.workspace}}/build
+
+      - name: Generating configuration
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        shell: bash
+
+      - name: Building easea
+        id: build
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        shell: bash
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: built-MacOS
+          path: ${{github.workspace}}/build
+
+      - name: Save status
+        if: ${{ always() }}
+        id: status
+        run: echo "::set-output name=status::${{ job.status }}"
         shell: bash
 
   install-Linux:
-    name: Install Easea
+    name: Install Easea (Linux)
     runs-on: ubuntu-latest
     needs: [build-Linux]
     outputs:
@@ -178,6 +216,42 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: installed-Linux
+          path: /usr/local/easena
+
+      - name: Save status
+        if: ${{ always() }}
+        id: status
+        run: echo "::set-output name=status::${{ job.status }}"
+        shell: bash
+
+  install-MacOS:
+    name: Install Easea (MacOS)
+    runs-on: macos-latest
+    needs: [build-MacOS]
+    outputs:
+      status: ${{ steps.status.outputs.status }}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: built-Linux
+          path: ${{github.workspace}}/build
+
+      - name: Generating configuration
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        shell: bash
+
+      - name: Install
+        run: sudo cmake --install ${{github.workspace}}/build
+        shell: bash
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: installed-MacOS
           path: /usr/local/easena
 
       - name: Save status
@@ -236,6 +310,58 @@ jobs:
           echo "::set-output name=passed::${PASSED}"
           echo "::set-output name=failed::${FAILED}"
         shell: bash
+
+  test-MacOS:
+    name: Test Easea
+    runs-on: macos-latest
+    needs: [install-macos]
+    outputs:
+      total: ${{ steps.status.outputs.total }}
+      passed: ${{ steps.status.outputs.passed }}
+      failed: ${{ steps.status.outputs.failed }}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: built-MacOS
+          path: ${{github.workspace}}/build
+
+      - name: Generating configuration
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        shell: bash
+
+      - name: Installing easea
+        run: sudo cmake --install ${{github.workspace}}/build
+        shell: bash
+
+      - name: Installing CUDA toolkit
+        uses: Jimver/cuda-toolkit@v0.2.7
+        with:
+          cuda: '11.7.0'
+
+      - name: Build examples
+        run: |
+          EZ_PATH=/usr/local/easena/ bash ${{github.workspace}}/examples/build-all.sh "/usr/local/easena/bin/easena" | tee examples.output
+          result_code=${PIPESTATUS[0]}
+          exit $result_code
+        shell: bash
+
+      - name: Output examples status
+        id: status
+        if: ${{ always() }}
+        run: |
+          LINE=$(cat examples.output | sed -n 's/passed://p' | sed -n 's/\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*//pg')
+          NBE=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\2/p')
+          PASSED=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\1/p')
+          FAILED=$((NBE - PASSED))
+          echo "::set-output name=total::${NBE}"
+          echo "::set-output name=passed::${PASSED}"
+          echo "::set-output name=failed::${FAILED}"
+        shell: bash
+
 
           # badges:
           #   runs-on: ubuntu-latest
