verbose makefile for debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
+# Debug ONLY
+set(CMAKE_VERBOSE_MAKEFILE TRUE)
+
 PROJECT(EASENA)#_DEBUG VERSION "2.20.0")
 set(PROJECT_NAME "EASENA")
 set(PROJECT_VER  "RE")
