--- a/config.h.in
+++ b/config.h.in
@@ -1,10 +1,10 @@
 #pragma once
 
 #cmakedefine PROJECT_NAME "@PROJECT_NAME@"
-#cmakedefine PROJECT_VER  "@PROJECT_VER@"
-#cmakedefine PROJECT_VER_MAJOR @PROJECT_VER_MAJOR@
-#cmakedefine PROJECT_VER_MINOR @PROJECT_VER_MINOR@
-#cmakedefine PROJECT_VER_PATCH @PROJECT_VER_PATCH@
+#cmakedefine PROJECT_VERSION  "@PROJECT_VERSION@"
+#cmakedefine PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#cmakedefine PROJECT_VERSION_MINOR @PROJECT_VERSION_MINOR@
+#cmakedefine PROJECT_VERSION_PATCH @PROJECT_VERSION_PATCH@
 
 #cmakedefine USE_OPENMP
 
