Fix config + bison

--- a/config.h.in
+++ b/config.h.in
@@ -2,9 +2,9 @@
 
 #cmakedefine PROJECT_NAME "@PROJECT_NAME@"
 #cmakedefine PROJECT_VERSION  "@PROJECT_VERSION@"
-#cmakedefine PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
-#cmakedefine PROJECT_VERSION_MINOR @PROJECT_VERSION_MINOR@
-#cmakedefine PROJECT_VERSION_PATCH @PROJECT_VERSION_PATCH@
+#define PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#define PROJECT_VERSION_MINOR @PROJECT_VERSION_MINOR@
+#define PROJECT_VERSION_PATCH @PROJECT_VERSION_PATCH@
 
 #cmakedefine USE_OPENMP
 
