--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -400,14 +400,9 @@ jobs:
         run: sudo cmake --install ${{github.workspace}}/build
         shell: bash
 
-      - name: Installing CUDA toolkit
-        uses: Jimver/cuda-toolkit@v0.2.7
-        with:
-          cuda: '11.7.0'
-
       - name: Build examples
         run: |
-          EZ_PATH=/usr/local/easena/ bash ${{github.workspace}}/examples/build-all.sh "/usr/local/easena/bin/easena" | tee examples.output
+          EZ_PATH=/usr/local/easena/ bash ${{github.workspace}}/examples/build-all.sh "/usr/local/easena/bin/easena" --no-cuda | tee examples.output
           result_code=${PIPESTATUS[0]}
           exit $result_code
         shell: bash
