fix cmake includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ INCLUDE_DIRECTORIES(${PROJECT_BINARY_BIN})
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libeasea/include)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libeasna/include)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/cxxopts)
-target_include_directories(libeasea PUBLIC ${CMAKE_SOURCE_DIR}/third_party/boost)
+target_include_directories(libeasea PUBLIC ${CMAKE_SOURCE_DIR}/third_party)
 
 ### Dependencies ###
 
