Installation of boost header-only alongside

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,7 @@ INSTALL(TARGETS libeasea DESTINATION libeasna)
 FILE(GLOB templates ${CMAKE_SOURCE_DIR}/tpl/*)
 INSTALL(FILES ${templates} DESTINATION tpl)
 INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasea/include DESTINATION libeasea)
+INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/third_party/boost DESTINATION libeasea/include)
 INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasna/include DESTINATION libeasna)
 INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasna/src DESTINATION libeasna)
 INSTALL(DIRECTORY examples DESTINATION ".")
