--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Installing dependencies if needed
-      run: choco install winflexbison3
+      run: choco install winflexbison3 boost-msvc-14.3
       shell: bash
 
     - name: Configure CMake
@@ -172,7 +172,7 @@ jobs:
           path: ./build
 
       - name: Installing dependencies if needed
-        run: choco install winflexbison3
+        run: choco install winflexbison3 boost-msvc-14.3
         shell: bash
 
       - name: Configure CMake
@@ -328,7 +328,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Installing dependencies if needed
-        run: choco install winflexbison3
+        run: choco install winflexbison3 boost-msvc-14.3
         shell: bash
 
       - name: Download artifacts
@@ -347,7 +347,6 @@ jobs:
 
       - name: DEBUG
         run: ls -al "/"
-        
       - run: ls -al "D:"
       - run: ls -al "D:/*"
       - run: ls -al "C:/*"
@@ -481,7 +480,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Installing dependencies if needed
-        run: choco install winflexbison3
+        run: choco install winflexbison3 boost-msvc-14.3
         shell: bash
 
       - name: Download artifacts
