fix msvc openmp error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -520,7 +520,7 @@ jobs:
 
       - name: Build examples
         run: |
-          EZ_PATH="C:/Program Files/easena/" bash ${{github.workspace}}/examples/build-all.sh "C:/Program Files/easena" | tee examples.output
+          EZ_PATH="C:/Program Files/easena/" bash ${{github.workspace}}/examples/build-all.sh "C:/Program Files/easena" --no-cuda | tee examples.output
           result_code=${PIPESTATUS[0]}
           exit $result_code
         shell: bash
