--- a/config.h.in
+++ b/config.h.in
@@ -14,3 +14,10 @@
 #else
   #define OMP_NUM_THREADS 1
 #endif
+
+// OS defines
+#if defined(linux) || defined(__linux) || (__APPLE__) || (macintosh) || (Macintosh)
+	#define OS_UNIX
+#elif defined(__CYGWIN__) || defined(__MINGW32__) || defined(__MINGW64__) || defined(_WIN32) || defined(_WIN64) || defined(__WIN32__) || defined(__WINDOWS__) || defined(__TOS_WIN__)
+	#define OS_WINDOWS
+#endif
