--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -465,7 +465,7 @@ jobs:
         shell: bash
 
       - name: Installing easea
-        run: sudo cmake --install ${{github.workspace}}/build
+        run: cmake --install ${{github.workspace}}/build
         shell: bash
 
       - name: Build examples
@@ -515,7 +515,7 @@ jobs:
         shell: bash
 
       - name: Installing easea
-        run: sudo cmake --install ./build
+        run: cmake --install ./build
         shell: bash
 
       - name: Build examples
