--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -357,7 +357,7 @@ jobs:
         shell: bash
 
       - name: Install
-        run: sudo cmake --install ./build
+        run: cmake --install ./build
         shell: bash
 
       - name: DEBUG
@@ -465,7 +465,7 @@ jobs:
         shell: bash
 
       - name: Installing easea
-        run: cmake --install ${{github.workspace}}/build
+        run: sudo cmake --install ${{github.workspace}}/build
         shell: bash
 
       - name: Build examples
