Fix install again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.9) # 3.9: OpenMP improved support
 # Debug ONLY
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
-PROJECT(EASENA VERSION 3.0.0)#_DEBUG VERSION "2.20.0")
-set(PROJECT_NAME "EASENA")
+PROJECT(EASENA VERSION 3.0.0)
+#set(PROJECT_NAME "EASENA")
 
 message("-- PROJECT NAME: ${PROJECT_NAME}")
 message("-- PROJECT VERSION: ${PROJECT_VERSION}")
@@ -120,19 +120,20 @@ BISON_TARGET( NeuralParser
 )
 
 ### Installation ###
+set(OUTPUT_DIR string(TOLOWER ${PROJECT_NAME}))
 ## Binaries
 INSTALL(TARGETS easena libeasea libeasna)
-INSTALL(TARGETS libeasna DESTINATION ${PROJECT_NAME}/libeasea)
-INSTALL(TARGETS libeasea DESTINATION ${PROJECT_NAME}/libeasna)
+INSTALL(TARGETS libeasna DESTINATION ${OUTPUT_DIR}/libeasea)
+INSTALL(TARGETS libeasea DESTINATION ${OUTPUT_DIR}/libeasna)
 
 ## Text
 FILE(GLOB templates ${CMAKE_SOURCE_DIR}/tpl/*)
-INSTALL(FILES ${templates} DESTINATION ${PROJECT_NAME}/tpl)
-INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasea/include DESTINATION ${PROJECT_NAME}/libeasea)
-INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasna/include DESTINATION ${PROJECT_NAME}/libeasna)
-INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasna/src DESTINATION ${PROJECT_NAME}/libeasna)
-INSTALL(DIRECTORY examples DESTINATION ".")
-INSTALL(FILES "easeagrapher/EaseaGrapher.jar" DESTINATION "easeagrapher")
+INSTALL(FILES ${templates} DESTINATION ${OUTPUT_DIR}/tpl)
+INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasea/include DESTINATION ${OUTPUT_DIR}/libeasea)
+INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasna/include DESTINATION ${OUTPUT_DIR}/libeasna)
+INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/libeasna/src DESTINATION ${OUTPUT_DIR}/libeasna)
+INSTALL(DIRECTORY examples DESTINATION ${OUTPUT_DIR})
+INSTALL(FILES "easeagrapher/EaseaGrapher.jar" DESTINATION ${OUTPUT_DIR}/easeagrapher)
 
 ### Tests ###
 
