--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -501,7 +501,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Installing dependencies if needed
-        run: choco install winflexbison3 boost-msvc-14.3
+        run: choco install winflexbison3 boost-msvc-14.3 sed
         shell: bash
 
       - name: Download artifacts
