Forgot to add binary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ BISON_TARGET( NeuralParser
 string(TOLOWER ${PROJECT_NAME} OUTPUT_DIR)
 ## Binaries
 INSTALL(TARGETS easena libeasea libeasna)
+INSTALL(TARGETS easena DESTINATION ${OUTPUT_DIR}/bin)
 INSTALL(TARGETS libeasna DESTINATION ${OUTPUT_DIR}/libeasea)
 INSTALL(TARGETS libeasea DESTINATION ${OUTPUT_DIR}/libeasna)
 
