--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,10 +45,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - uses: actions/cache@v2
+      with:
+        path: /usr
+        key: MacOS-cache
+
     - name: Installing dependencies if needed
       shell: bash
       run: |
-        brew install bison libomp boost
+        brew install bison libomp boost coreutils gnu-sed
         export PATH="$(brew --prefix bison)/bin:$PATH"
 
     - name: Configure CMake
@@ -76,6 +81,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - uses: actions/cache@v2
+      with:
+        path: |
+          C:\Program Data
+          C:\Program Files*
+        key: Windows-cache
 
     - name: Installing dependencies if needed
       run: choco install winflexbison3 boost-msvc-14.3
@@ -175,15 +187,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/cache@v2
+        with:
+          path: |
+            C:\Program Data
+            C:\Program Files*
+          key: Windows-cache
+
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
           name: build-configured-Windows
           path: ./build
-
-      - name: Installing dependencies if needed
-        run: choco install winflexbison3 boost-msvc-14.3
-        shell: bash
 
       - name: Configure CMake
         run: cmake -B ./build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
@@ -216,11 +231,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Installing dependencies if needed
-        shell: bash
-        run: |
-          brew install bison libomp boost
-          export PATH="$(brew --prefix bison)/bin:$PATH"
+      - uses: actions/cache@v2
+        with:
+          path: /usr
+          key: MacOS-cache
 
       - name: Download artifacts
         uses: actions/download-artifact@v3
